# RailFluxHardCoded

./: CMakeLists.txt  Main.qml  main.cpp
components/: AdvanceStarterSignal.qml  GridCanvas.qml  HomeSignal.qml  LevelCrossingGate.qml  OuterSignal.qml  PerformanceDashboard.qml  PointMachine.qml  RouteAssignmentDialog.qml  RouteInfoItem.qml  RouteInfoPanel.qml  RouteOverlay.qml  RouteSignalDot.qml  RouteVisualization.qml  SignalContextMenu.qml  SignalIndicator.qml  StarterSignal.qml  ToastNotification.qml  TrackSegment.qml
database/: DatabaseInitializer.cpp  DatabaseInitializer.h  DatabaseManager.cpp  DatabaseManager.h
interlocking/: AspectPropagationService.cpp  AspectPropagationService.h  InterlockingRuleEngine.cpp  InterlockingRuleEngine.h  InterlockingService.cpp  InterlockingService.h  PointMachineBranch.cpp  PointMachineBranch.h  SignalBranch.cpp  SignalBranch.h  SignalRule.cpp  SignalRule.h  TrackCircuitBranch.cpp  TrackCircuitBranch.h
layouts/: StationLayout.qml
resources/data/: temp.json
route/: GraphService.cpp  GraphService.h  OverlapService.cpp  OverlapService.h  ResourceLockService.cpp  ResourceLockService.h  RouteAssignmentService.cpp  RouteAssignmentService.h  SafetyMonitorService.cpp  SafetyMonitorService.h  TelemetryService.cpp  TelemetryService.h  VitalRouteController.cpp  VitalRouteController.h
sql/: sql_commands_railflux.sql
